0.9.5 - not yet released
* Add in REPLACE to LOAD DATA INFILE command (jayzes/kookster)
* Remove FasterCSV from dependencies (not used apparently)

0.5 - January 14, 2009
* Updated dependencies for gem to current versions of ActiveRecord, ActiveSupport and Rake. May not be compatible with Rails versions less than 2.x.

0.4 - September 17, 2007
* Added copy_table method that can copy the structure and data from one table to another. Currently implemented in MySQL (tested), PostgreSQL (tested) and SQL Server adapters (untested).
* Added support for SELECT..INTO for PostgreSQL.

0.3.1 - May 4, 2007
* Added support for modifying SELECT statements to add an INSERT INTO.

0.3.0 - March 8, 2007
* PostgreSQL adapter included
* Added tests for bulk loading
* bulk_load method now handles table missing and file missing as error cases

0.2.0 - March 6, 2007
* SQL Server adapter included (Seth Ladd)

0.1.2 - March 5, 2007
* Bug fixes

0.1.1 - March 5, 2007
* Bug fixes

0.1.0 - March 5, 2007
* Initial release
